# ga-shift

./: .gitignore  GA-SHIFT-AGNO-PLAN.md  README.md  SETUP_GUIDE.md  ga_shift_v1.py  ga_shift_v2.py  pyproject.toml  requirements.txt  shift_input.xlsx
.streamlit/: config.toml
docs/: architecture-wireframe.html
notebooks/: kimachiya_shift.ipynb
scripts/: chat_constraints.py
src/ga_shift/: __init__.py
src/ga_shift/agents/: __init__.py  base.py  conductor.py  constraint_builder.py  ga_engine.py  reporter.py  validator.py
src/ga_shift/agno_agents/: __init__.py  adjuster.py  compliance.py  handover.py  hearing.py  monitoring.py  neo4j_bridge.py  optimizer.py  report.py  simulation.py  team.py
src/ga_shift/constraints/: __init__.py  base.py  day_constraints.py  employee_constraints.py  fairness_constraints.py  kimachi_constraints.py  pattern_constraints.py  registry.py
src/ga_shift/ga/: __init__.py  engine.py  evaluation.py  operators.py  population.py
src/ga_shift/io/: __init__.py  excel_reader.py  excel_writer.py  template_generator.py
src/ga_shift/mcp/: __init__.py  __main__.py  server.py
src/ga_shift/models/: __init__.py  (+6 more)
tests/: conftest.py
tests/test_agents/: test_conductor.py
tests/test_agno/: test_agents.py  test_chat_app.py  test_extended_agents.py  test_neo4j_bridge.py  test_ops_agents.py
tests/test_constraints/: test_day_constraints.py  test_kimachi_constraints.py  test_pattern_constraints.py
tests/test_ga/: test_engine.py  test_operators.py
tests/test_io/: test_excel_reader.py
tests/test_mcp/: test_mcp_client.py  test_tools.py
(+11 files in other folders)
