[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ga-shift"
version = "0.1.0"
description = "Multi-agent shift scheduler using Genetic Algorithm"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "pydantic>=2.5",
    "openpyxl>=3.1",
    "streamlit>=1.30",
]

[project.optional-dependencies]
agno = [
    "agno>=1.0",
    "fastmcp>=2.0",
    "anthropic>=0.40",
    "sqlalchemy>=2.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ga_shift"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
